<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightGrey"
        android:textSize="48sp"
        android:padding="10dp"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_1"
            />

        <Button
            android:id="@+id/btnTwo"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btnThree"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onOperator"
            android:text="@string/isMinus"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_4"
            />

        <Button
            android:id="@+id/btnFive"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btnSix"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:backgroundTint="@color/grey"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btnMul"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:backgroundTint="@color/grey"
            android:text="@string/multiple"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_7"
            />

        <Button
            android:id="@+id/btnEight"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btnNine"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onOperator"
            android:text="@string/divide"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDecimalPoint"
            android:text="@string/dot" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnClear"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:backgroundTint="@color/grey"
            android:text="@string/clr" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onOperator"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnEqual"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onEqual"
            android:text="@string/equal"
            />
    </LinearLayout>


</LinearLayout>
